fixed nav/logo overlaps other elements onSroll

--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,10 @@
   ) !important;
 }
 
+.nav {
+  position: relative;
+}
+
 #logo {
   width: 80px;
   animation: 2s ease-out slidein;
